--- a/Zippy/Dockerfile
+++ b/Zippy/Dockerfile
@@ -1,11 +1,12 @@
-# Use OpenJDK base image
-FROM eclipse-temurin:19-jdk
-
-# Set working directory
+# Use Maven to build the app
+FROM maven:3.8.5-openjdk-17 AS build
 WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
 
-# Copy the jar file (you may change the name if different)
-COPY target/Zippy-0.0.1-SNAPSHOT.jar app.jar
-
-# Run the jar file
+# Use JDK image to run the app
+FROM eclipse-temurin:17
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
+EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
